apps/support/tactical-rmm/base/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trmm-frontend
spec:
  ingressClassName: nginx
  tls:
  - hosts: [rmm.support4u.se]
    secretName: support4u-tls
  rules:
  - host: rmm.support4u.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trmm-frontend
            port:
              number: 80
